--- a/styles/Mesekai.module.css
+++ b/styles/Mesekai.module.css
@@ -9,6 +9,7 @@
     animation-name: blink;
     animation-iteration-count: infinite;
     animation-direction: alternate;
+    
 }
 .videos{
   position: absolute;
@@ -17,6 +18,8 @@
   max-width: 400px;
   height: auto;
   transform: scale(-1, 1);
+  border-radius: 5%;
+  padding: 5px;
 }
 .guides{
   position: absolute;
@@ -26,6 +29,8 @@
   height: auto;
   transform: scale(-1, 1);
   z-index: 9;
+  border-radius: 5%;
+  padding: 5px;
 }
 @keyframes blink {
     from {
